--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for matteo scarpa at 2014-12-02 22:38:23 +0100 
+%% Created for matteo scarpa at 2014-12-02 23:37:10 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,8 +11,8 @@
 
 @webpage{site:w3chtml5,
 	Date-Added = {2014-12-02 21:37:35 +0000},
-	Date-Modified = {2014-12-02 21:38:13 +0000},
-	Title = {Pagina dello standard HTML%},
+	Date-Modified = {2014-12-02 22:37:06 +0000},
+	Title = {Pagina dello standard HTML5},
 	Url = {http://www.w3.org/TR/html5/}}
 
 @book{flanaganjavascript,
