Aggiornamento piccole cose

--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,14pt]{article}
+\documentclass[a4paper,12pt]{article}
 
 \usepackage[T1]{fontenc}	% imposta la codifica dei font
 \usepackage[utf8]{inputenc}	% lettere accentate da tastiera
@@ -10,7 +10,7 @@
 %*********************************************************************************
 % Impostazioni di biblatex
 %*********************************************************************************
-\usepackage[bibstyle=alphabetic,citestyle=alphabetic,backend=bibtex]{biblatex}
+\usepackage[backend=bibtex]{biblatex}
 
 \bibliography{bibliografiareti.bib} 
 
@@ -131,6 +131,8 @@ Questo ha portato a sviluppare nel relitavamente nuovo standard HTML5 la possibi
 \subsection{XMLHttp} Per realizzare un applicativo AJAX è necessario utilizzare un API o una libreria come XMLHttp che ti permetta di aggiornare la pagina dinamicamente richiedendo i dati al server sotto forma di file XML.\footnote{Ovviamente dal nome è facile capire che questa API permette di lavorare senza problemi sopratutto se il server risponde con file XML anche se supporta il JSON e i testi semplici} 
 La maggior parte dei browser supportano l'API XMLHttp\footnote{vedi \textcites{site:xmlhttpcompatibilita}} anche se alcune versioni di Internet Explorer non lo supportano e usano altre API.
 Questa libreria gestisce tutte una serie di funzionalità utili per l'elaborazione delle richieste da inviare al server e per elaborare le risposte ottenute.
+
+%TODO Aggiungere i vari comandi di XMLHttp per spiegare come funziona l'API
 
 \newpage
 \subsection*{\refname}
