--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{report}
 
 \usepackage[T1]{fontenc}	% imposta la codifica dei font
 \usepackage[utf8]{inputenc}	% lettere accentate da tastiera
@@ -6,20 +6,21 @@
 \usepackage[babel]{csquotes}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage[savemem]{listings} %per scrivere codice
+
+
+%Personalizzazione codice
+\lstnewenvironment{xml}{\lstset{language=XML}}{}
 
 %*********************************************************************************
 % Impostazioni di biblatex
 %*********************************************************************************
-\usepackage[backend=bibtex]{biblatex}
+\usepackage[style=numeric,backend=bibtex]{biblatex}
 
-\bibliography{bibliografiareti.bib} 
+\addbibresource{bibliografiareti.bib} 
 
-
-\DeclareBibliographyCategory{libri}
-\DeclareBibliographyCategory{web}
-
-\defbibheading{libri}{\subsubsection*{Manuali e Testi consultati}}
-\defbibheading{web}{\subsubsection*{Siti Web consultati}}
+\defbibheading{libri}{\subsection*{Manuali e Testi consultati}}
+\defbibheading{web}{\subsection*{Siti Web consultati}}
 
 
 %*********************************************************************************
@@ -36,14 +37,14 @@
 \maketitle
 \newpage
 
-\section{XML}
-\subsection{Cos'è un file XML}
-XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{Standard W3C \cite{site:w3cxml}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
+\chapter{XML}
+\section{Cos'è un file XML}
+XML è un \textit{linguaggio di markup} e XML sta per e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage\footnote{Vedi \cite{site:w3cxml}} ovvero un linguaggio che consente di definire gli elementi di un documento attraverso meccanismi sintattici.
 È derivato dallo standard SGML  ed è pensato per formattare informazioni ed è nato per uso legato alla rete anche se poi è stato esteso anche a formato per il salvataggio di file.
 
-\subsubsection{Storia del XML}
+\subsection{Storia del XML}
 XML si prefigge di essere una versione semplificata di \textbf{S}tandard \textbf{G}eneralized \textbf{M}arkup \textbf{L}anguage (conosciuto anche come SGML o ISO 8879) da cui deriva.
-Il SGML è un metalinguaggio definito come standard ISO\footnote{Standard ISO \cite{site:isosgml}}  avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
+Il SGML è un metalinguaggio definito come standard ISO\footnote{Vedi \cite{site:isosgml}} avente lo scopo di definire linguaggi da utilizzare per la stesura di testi destinati ad essere trasmessi ed archiviati con strumenti informatici, ossia per la stesura di documenti in forma leggibile da computer (machine readable form). Da questo linguaggio XML prende il DTD (o Document Type Definition) che è un documento che definisce le componenti ammesse e come devono essere strutturati.
 
 Lo sviluppo dell' XML parte nel 1996 quando si costituì l’XML Working Group all'interno del W3C per poter definire un linguaggio di markup che offrisse maggior libertà nella definizione dei tag rispetto a SGML. Questo viene fatto perchè l'assenza di uno standard abbastanza elastico stava portando i vari sviluppatori di browser e di formati per il web a fare "estensioni" non standard creando caos nella condivisione dei file nel web in quanto solo il loro prodotto poteva visualizzare correttamente i file.
 L' XML Working Group ha quindi definito la struttura di base dell' XML e ha portato alla sua prima definizione di uno standard riconosciuto dell XML. 
@@ -54,19 +55,20 @@ Per questo motivo spesso il formato XML viene considerato appartenente al livell
 
 Tra i vari formati derivati ricordiamo:
 \begin{itemize}
-\item \textbf{ODF} formato di documenti OpenSource. Si struttura come una cartella compressa contenente file XML per la definizione del contenuto del documento\footnote{Standard ISO \cite{site:isoodf} }
-\item \textbf{SVG} formato per le immagini vettoriali. Definisce gli oggetti geometrici attraverso funzioni matematiche. Questo permette di avere immagini "leggibili" da codice e facilemente modificabili con processi automatici, che vanno a leggere il contenuto dell'XML e a modificare i tag di interesse.\footnote{Standard  W3C \cite{site:w3csvg}}
-\item \textbf{X3D} formato per gli oggetti tridimensionali e delle scene in cui tali oggetti esistono. Utilizzato da alcuni programmi di grafica 3D per la visualizzazione web \footnote{Standard W3C \cite{site:w3dx3d}}
+\item \textbf{ODF} formato di documenti OpenSource. Si struttura come una cartella compressa contenente file XML per la definizione del contenuto del documento\footnote{Vedi \cite{site:isoodf}}
+\item \textbf{SVG} formato per le immagini vettoriali. Definisce gli oggetti geometrici attraverso funzioni matematiche. Questo permette di avere immagini "leggibili" da codice e facilemente modificabili con processi automatici, che vanno a leggere il contenuto dell'XML e a modificare i tag di interesse.\footnote{Vedi \cite{site:w3csvg}}
+\item \textbf{X3D} formato per gli oggetti tridimensionali e delle scene in cui tali oggetti esistono. Utilizzato da alcuni programmi di grafica 3D per la visualizzazione web \footnote{Vedi \cite{site:w3dx3}}
 \end{itemize}
 In oltre molti database strutturano i dati in formato XML perchè è più facile elaborarli in tempi costanti e risulta più facilmente adattabile al paradigma del database funzionale.
 
-\subsubsection{Struttura}
+\subsection{Struttura}
 La struttura di un file XML è sempre la stessa:
 \begin{itemize}
 \item Un \textbf{header}, solitamente sotto la forma di un tag XML,  che indica la versione XML (o derivate) utilizzata per la stesura del documento e la versione della codifica utilizzata nel documento XML
 \item Un \textbf{tag di corpo} contenente tutti gli altri tag strutturati ad albero. In oltre, nel tag di corpo c'è la possibilità che sia anche presente la definizione del namespace utilizzato per la definizione dei tag.
+\item Tutti gli altri tag, che seguono rigide regole di definizione.
 \end{itemize}
-In più, per essere correttamente visualizzato deve essere \textbf{ben formattato} ovvero
+In più, per essere correttamente visualizzato o utilizzato deve essere \textbf{ben formattato} ovvero
 \begin{itemize}
 \item Ogni etichetta o tag deve essere compreso tra due parentesi angolate (<>) e deve avere il corrispettivo tag di chiusura. Questo può essere realizzato attraverso una coppia di tag (<\textit{etichetta}></ \textit{etichetta}>) o un tag unico che si chiude in se stesso (<\textit{etichetta}/>)
 \item I tag non possono iniziare con numeri o caratteri speciali
@@ -76,7 +78,84 @@ In più, per essere correttamente visualizzato deve essere \textbf{ben formattat
 \item I tag sono \textit{case sensitive} quindi bisogna fare attenzione quando definisco i tag (esempio: il tag \textit{PianoForte} è diverso dal tag \textit{Pianoforte} e possono essere utilizzati per indicare tag dalla funzione diversa)
 \end{itemize}
 
-\subsection{Grammatica e definizione degli elementi sintattici}
+\subsection{Esempio di XML}
+Un esempio di XML ben formattato è il seguente:
+\begin{xml}
+<?xml version="1.0" encoding="UTF-8"?>
+ <?xml-stylesheet type="text/css" href="esempio.css"?>
+  <lettera xsi:noNamespaceSchemaLocation="esempio.xsd"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <mittente>Romeo Rossi</mittente>
+  <data>2012-09-28</data>
+  <destinatario>Giulietta Verdi</destinatario>
+  <oggetto>Riunione operativa</oggetto>
+  <forma_cortesia>Egregia Dott.ssa Verdi </forma_cortesia>
+  <corpo>
+   <paragrafo>come da accordi telefonici, 
+     indico la riunione operativa per il 3 
+     ottobre 2012 alle ore 10:00. 
+     Prego di portare tutti i documenti relativi al progetto
+   </paragrafo>
+ </corpo>
+ <chiusura>Cordiali Saluti</chiusura>
+ <firma>Romeo Rossi
+ </firma>
+</lettera>
+\end{xml}
+
+
+\section{XSLT}
+Assieme all'XML è stato sviluppato un meccanismo per visualizzare direttamente i dati XML dal browser attraverso una trasformazione in un altro documento: XSLT appunto.
+E\textbf{X}tensible \textbf{S}tylesheet \textbf{L}anguage \textbf{T}ransformations permette infatti di rielaborare il documento XML in un nuovo documento leggibile dal browser\footnote{Vedi \cite{site:w3cxslt}} o dall'applicazione in particolare. Questo va a produrre un documento XML o in un altro formato derivaro dall XML più facilmente utilizzabile o visualizzabile dall'applicativo.
+
+
+Un esempio di un applicativo di questo tipo può essere il sito di una banca, che richiede gli aggiornamenti in tempo reale dei dati della borsa. Va a richiedere i dati attraverso un applicativo AJAX al server della borsa e lo rielabora attraverso il suo XSLT in un formato più facilemente visualizzabile dalla pagina web o semplicemente elimina informazioni in eccesso nell'XML per semplificare la successiva elaborazione e visualizzazione.
+
+Questo permette, in oltre, di avere un filtro nei dati visualizzati alleggerendo il javascript dall'oneroso lavoro di parsare il contenuto del file XML.
+
+\subsection{Esempio di output di XSLT}
+Questo è un esempio di output ottenuto eseguendo un XSLT sul codice XML precedentemente mostrato
+\begin{xml}
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?xml-stylesheet type="text/css" href="esempio.css"?>
+<html xmlns:h="http://www.w3.org/1999/xhtml" lang="it"
+ xml:lang="it">
+<h:h1>Riunione</h:h1>
+
+<lettera xsi:noNamespaceSchemaLocation="lettera.xsd" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xmlns="http://www.business.org">
+<mittente>Romeo Rossi</mittente><h:br/>
+<data>2012-09-28</data>
+<br/>
+<destinatario>Giulietta Verdi</destinatario>
+<p>
+<oggetto>Riunione operativa</oggetto>
+<forma_cortesia>Egregia Dott.ssa Verdi </forma_cortesia>
+<corpo>
+<paragrafo>
+come da accordi telefonici, indico la riunione operativa 
+per il 3 ottobre 2012 alle ore 10:00. 
+Prego di portare tutti i documenti relativi al progetto
+.
+<h:br/>Nota: per informazioni ulteriori si veda a questo 
+<h:a href="http://www.unive.it">link</h:a>
+</paragrafo>
+</corpo>
+<chiusura>Cordiali Saluti
+</chiusura>
+</p>
+<firma>Romeo Rossi
+</firma>
+</lettera>
+</html>
+
+\end{xml}
+
+
+
+\section{Grammatica e definizione degli elementi sintattici}
 Il formato di file XML per certi punti di vista è molto aperto e permette una grande libertà nei tag pur mantenendo una sintassi stretta e bene definita.
 Questo comporta, però, una definizione di sintassi unica per la rappresentazione dei documenti che bisogna concordare tra gli utilizzatori di quel determinato tipo di documento XML. Questo ha portato alla necessità di definire delle \textbf{grammatiche} ovvero dei documenti che definisco quali sono i tag XML da utilizzare e come all'interno del documento che si ha intenzione di utilizzare.
 
@@ -91,26 +170,53 @@ Questa tipologia di documenti viene definita in un file (solitamente a parte ris
 
 Per questo genere di lavoro sono stati definiti due tipi di file: DTD e il XML Schema 
 
-\subsubsection{Document Type Definition}
+\section{Document Type Definition}
 Il \textbf{D}ocument \textbf{T}ype \textbf{D}efinition (o DTD) permette di descrivere i tag html da utilizzare all'interno di un documento e il loro rapporto reciproco. Questo permette un ampio controllo sul contenuto del documento e semplifica il lavoro di elaborazione di entrambi le parti. 
 
-\subsection{XML Schema}
+\section{XML Schema}
 Successivamente per le definizioni di grammatiche per le applicazioni XML è stato in trodotto il linguaggio XML Schema, pensato apposta per questa funzione. Questo nuovo tipo di documenti permette un maggior controllo nella definizione dei documenti Xml attraverso i namespace ed è l'unico linguaggio di definizione del contenuto per XML approvato dalla W3C (\cite{site:w3cxmlschame} )
 
 
-\section{AJAX}
+\subsection{Esempio di XMLS}
+
+\begin{xml}
+<?xml version="1.0" encoding="UTF-8"?>
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
+<xs:element name="lettera">
+<xs:complexType>
+<xs:sequence>
+ <xs:element name="mittente" type="xs:string"></xs:element>
+ <xs:element name="data" type="xs:date"></xs:element>
+ <xs:element name="destinatario" type="xs:string"></xs:element>
+ <xs:element name="oggetto" type="xs:string"></xs:element>
+ <xs:element name="forma_cortesia" type="xs:string"></xs:element>
+ <xs:element name="corpo" minOccurs="1">
+  <xs:complexType><xs:sequence><xs:element name="paragrafo" 
+    type="xs:string"></xs:element></xs:sequence></xs:complexType>
+ </xs:element>
+ <xs:element name="chiusura" type="xs:string"></xs:element>
+ <xs:element name="firma" type="xs:string"></xs:element>
+</xs:sequence>
+</xs:complexType></xs:element>
+
+</xs:schema>
+
+\end{xml}
+
+
+\chapter{AJAX}
 AJAX è una tecnica di sviluppo software basato sullo scambio dati in backgound tra il client e il server\footnote{Richiede infatti l'applicazione di un paradigma cliente servente}.  Il nome è un acronimo che sta per \textbf{A}synchronous \textbf{J}avaScript \textbf{A}nd \textbf{X}ML spiega anche come è nato.
 
 AJAX nasce come script che permette lo scambio di dati asincrono tra il client e il server, evitando così la richiesta al server da parte del browser e permettendo all'utente di non aggiornare la pagina visualizzata pur avendo una interazione col server. Nonostante il nome suggerisca l'uso di due tecnologie (Javascript e XML per l'appunto) questo non vuole dire che AJAX si limita solo a queste due ma utilizza anche altre tecnologie quali JSON, JScript e VBScript.
 
-Questa tecnica di sviluppo è largamente utilizzata nelle applicazioni web con poca o nessuna richiesta di refresh della pagina ma comunque la necessità di inviare e/o ricevere dati dal server. Spesso infatti si hanno applicazioni che recuperano in tempo reale le informazioni e "aggironano" la pagina con i nuovi dati senza dover riscrivere tutto oppure nel caso di pagine particolarmente pesanti di caricare la struttura HTML della pagina e appena sono pronti visualizza i dati richiesti dalla pagina.\footnote{\cites{flanaganjavascript} }
+Questa tecnica di sviluppo è largamente utilizzata nelle applicazioni web con poca o nessuna richiesta di refresh della pagina ma comunque la necessità di inviare e/o ricevere dati dal server. Spesso infatti si hanno applicazioni che recuperano in tempo reale le informazioni e "aggironano" la pagina con i nuovi dati senza dover riscrivere tutto oppure nel caso di pagine particolarmente pesanti di caricare la struttura HTML della pagina e appena sono pronti visualizza i dati richiesti dalla pagina.\footnote{Vedi \cites{flanaganjavascript} }
 
 Succesivamente è stato definito nel \textcites[pag~491]{flanaganjavascript} come 
 \begin{quotation}
 Ora (AJAX) è semplicemente un termine utile a identificare qualsiasi architettura di una web application basata su script di rischeste HTTP
 \end{quotation}
 
-\subsection{Problemi e vantaggi derivanti da AJAX}
+\section{Problemi e vantaggi derivanti da AJAX}
 Come tutte le cose AJAX dispone di vantaggi e di svantaggi.
 
 Per quanto riguarda i vantaggi questi sono molteplici:
@@ -128,14 +234,14 @@ Per quanto riguardo gli svantaggi sono, per fortuna, pochi e sistemabili seppur 
 
 Questo ha portato a sviluppare nel relitavamente nuovo standard HTML5 la possibilità di modificare la cronologia del browser\footnote{vedi \cites{site:w3chtml5} per approfondimento} per poter supportare la pagina generata attraverso AJAX. Questo viene infatti fatto perchè i comandi e le richieste degli scipt possano aggiungere i propri "eventi" all'interno della cronologia del browser ottenendo così coerenza tra la cronologia e le pagine navigate anche se soltanto aggiornate in parte.
 
-\subsection{XMLHttp} Per realizzare un applicativo AJAX è necessario utilizzare un API o una libreria come XMLHttp che ti permetta di aggiornare la pagina dinamicamente richiedendo i dati al server sotto forma di file XML.\footnote{Ovviamente dal nome è facile capire che questa API permette di lavorare senza problemi sopratutto se il server risponde con file XML anche se supporta il JSON e i testi semplici} 
+\section{XMLHttp} Per realizzare un applicativo AJAX è necessario utilizzare un API o una libreria come XMLHttp che ti permetta di aggiornare la pagina dinamicamente richiedendo i dati al server sotto forma di file XML.\footnote{Ovviamente dal nome è facile capire che questa API permette di lavorare senza problemi sopratutto se il server risponde con file XML anche se supporta il JSON e i testi semplici} 
 La maggior parte dei browser supportano l'API XMLHttp\footnote{vedi \textcites{site:xmlhttpcompatibilita}} anche se alcune versioni di Internet Explorer non lo supportano e usano altre API.
 Questa libreria gestisce tutte una serie di funzionalità utili per l'elaborazione delle richieste da inviare al server e per elaborare le risposte ottenute.
 
 %TODO Aggiungere i vari comandi di XMLHttp per spiegare come funziona l'API
 
 \newpage
-\subsection*{\refname}
+\section*{\refname}
 \printbibliography[heading=web, nottype=book]
 \printbibliography[heading=libri, type=book]
 
