--- a/Documentazione/bibliografiareti.bib
+++ b/Documentazione/bibliografiareti.bib
@@ -1,73 +1,50 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-
-%% Created for matteo scarpa at 2014-12-02 23:37:10 +0100 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
+@webpage{site:w3cxslt,
+	Title = {Pagina dello standard XSL Transformation},
+	Url = {http://www.w3.org/TR/xslt20/},
+	Bdsk-Url-1 = {http://www.w3.org/TR/xslt20/}}
 
 @webpage{site:w3chtml5,
-	Date-Added = {2014-12-02 21:37:35 +0000},
-	Date-Modified = {2014-12-02 22:37:06 +0000},
 	Title = {Pagina dello standard HTML5},
-	Url = {http://www.w3.org/TR/html5/}}
+	Url = {http://www.w3.org/TR/html5/},
+	Bdsk-Url-1 = {http://www.w3.org/TR/html5/}}
 
 @book{flanaganjavascript,
 	Author = {David Flanagan},
-	Date-Added = {2014-12-02 08:17:00 +0000},
-	Date-Modified = {2014-12-02 08:27:51 +0000},
 	Publisher = {O'Reilly},
 	Title = {Javascript - The dinitive Guide},
 	Year = {2011}}
 
 @webpage{site:xmlhttpcompatibilita,
-	Date-Added = {2014-12-01 18:57:37 +0000},
-	Date-Modified = {2014-12-01 19:05:09 +0000},
 	Title = {Pagina per il confronto di compatibilit{\`a} dei vari browser per l'API XMLHttp},
 	Url = {http://caniuse.com/#feat=xhr2},
 	Bdsk-Url-1 = {http://caniuse.com/#feat=xhr2}}
 
 @webpage{site:w3cXMLHttpRequest1,
-	Date-Added = {2014-12-01 17:34:04 +0000},
-	Date-Modified = {2014-12-01 17:35:25 +0000},
 	Title = {Pagina dell XMLHttpRequest Candidate Recommendation},
 	Url = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/},
 	Bdsk-Url-1 = {http://www.w3.org/TR/2012/NOTE-XMLHttpRequest1-20120117/}}
 
 @webpage{site:ajaxhtml,
-	Date-Added = {2014-12-01 17:14:54 +0000},
-	Date-Modified = {2014-12-01 17:35:56 +0000},
 	Title = {Tutorial su AJAX},
 	Url = {http://www.html.it/guide/guida-ajax/},
 	Bdsk-Url-1 = {http://www.html.it/guide/guida-ajax/}}
 
 @webpage{site:isosgml,
-	Date-Added = {2014-12-01 11:56:00 +0000},
-	Date-Modified = {2014-12-01 17:35:45 +0000},
 	Title = {Pagina dello standard SGML},
 	Url = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387},
 	Bdsk-Url-1 = {http://www.iso.org/iso/catalogue_detail.htm?csnumber=16387}}
 
 @webpage{site:w3dx3d,
-	Date-Added = {2014-12-01 08:22:14 +0000},
-	Date-Modified = {2014-12-01 17:34:42 +0000},
 	Title = {Pagina dello standard X3D},
 	Url = {http://www.web3d.org/documents/specifications/19775-1/V3.3/},
 	Bdsk-Url-1 = {http://www.web3d.org/documents/specifications/19775-1/V3.3/}}
 
 @webpage{site:w3csvg,
-	Date-Added = {2014-11-30 09:37:14 +0000},
-	Date-Modified = {2014-12-01 17:35:41 +0000},
 	Title = {Pagina dello standard SVG},
 	Url = {http://www.w3.org/TR/SVG/},
 	Bdsk-Url-1 = {http://www.w3.org/TR/SVG/}}
 
 @webpage{site:isoodf,
-	Date-Added = {2014-11-30 09:31:50 +0000},
-	Date-Modified = {2014-12-01 17:35:51 +0000},
 	Title = {Pagina dello standard ODF},
 	Url = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485},
 	Bdsk-Url-1 = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=43485}}
