Inizio serio della presentazione

--- a/Beamer/Beamer.tex
+++ b/Beamer/Beamer.tex
@@ -20,14 +20,9 @@
    \maketitle
 \end{frame}
 
-\begin{frame}
-   \frametitle{Argomenti}
-   \tableofcontents[pausesections]
-\end{frame}
-
 \section{XML}
 
-\subsection{Cos'è XML}
+\subsection{Cos'è un file XML}
 \begin{frame}
     \frametitle{Cos'è XML}
     \begin{itemize}
@@ -39,10 +34,21 @@
     \end{itemize}
 \end{frame}
 
-\subsection{Com'è strutturato}
+\subsection{Storia del XML}
+\begin{frame}
+    \begin{itemize}
+    \item Deriva da SGML, un linguaggio di markup
+    \item Viene creato durante la guerra dei browser
+    \item Inizialmente è pensato solo per formattare i dati per l'invio
+    \end{itemize}
 
+\end{frame}
+
+
+
+\subsection{Esempio di XML}
 \begin{frame}[fragile]
-    \frametitle{Com'è strutturato XML}
+    \frametitle{Esempio di XML}
     \begin{verbatim}
 <DataModelElement xsi:type="webml:Entity" id="0" >       
     <Attribute id="1" name="OID" type="OID" /> 
@@ -52,6 +58,12 @@
 </DataModelElement> 
     \end{verbatim}
 \end{frame}
+
+\subsection{XSLT}
+\subsection{Esempio di output di XSLT}
+\subsection{Document Type Definition}
+\subsection{XML Schema}
+\subsubsection{Esempio di XMLS}
 
 \section{AJAX}
 \subsection{Cos'è Ajax}
@@ -64,5 +76,7 @@
 
 \end{frame}
 
+\subsection{Problemi e vantaggi derivanti da AJAX}
+\subsection{XMLHttp} 
 
 \end{document}
