Aggiunto l'effetto per far apparire i vari punti degli elenchi puntati

--- a/Beamer/Beamer.tex
+++ b/Beamer/Beamer.tex
@@ -26,11 +26,11 @@
 \begin{frame}
     \frametitle{Cos'è XML}
     \begin{itemize}
-        \item Linguaggio di markup
-        \item e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage
-        \item È derivato dallo standard SGML (ISO 8879)
-        \item Viene usato per salvare o formattare informazioni
-        \item Viene affiancato da DTD e XML Schema
+        \item <1->e\textbf{X}tensible \textbf{M}arkup \textbf{L}anguage
+        \item <2->Linguaggio di markup
+        \item <3->È derivato dallo standard SGML (ISO 8879)
+        \item <4->Viene usato per salvare o formattare informazioni
+        \item <5->Viene affiancato da DTD e XML Schema
     \end{itemize}
 \end{frame}
 
@@ -61,16 +61,15 @@
 
 \begin{frame}
     \frametitle{Vincoli sintattici}
-    Per poter passare la validazione devono:
+    Per poter passare la validazione i tag devono:
     \begin{itemize}
-    \item Ogni tag deve essere compreso tra due parentesi angolate 
-    \item Ogni tag deve essere chiuso con \/ o avere il tag di chiusura
-    \item I tag non possono iniziare con numeri 
-    \item I tag non possono iniziare con caratteri speciali
-    \item I tag non possono contenere spazi 
-    \item I tag devono essere correttamente annidati 
+    \item <2->Essere compreso tra due parentesi angolate 
+    \item <3->Essere chiuso con \/ o avere il tag di chiusura
+    \item <4->Essere correttamente annidati 
+    \item <5->Non possono iniziare con numeri 
+    \item <6->Non possono iniziare con caratteri speciali
+    \item <7->Non possono contenere spazi 
     \end{itemize}
-
 \end{frame}
 
 
