Sistemata piccola dimenticanza

--- a/Beamer/Beamer.tex
+++ b/Beamer/Beamer.tex
@@ -118,6 +118,7 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{XML Schema}
 \begin{itemize}
     \item <1-> Standard ufficiale W3C per definire la sintassi XML
     \item <2-> Utilizza i namespace per definire i tag
